--- a/immunotracker/src/components/login.css
+++ b/immunotracker/src/components/login.css
@@ -3,7 +3,7 @@
   justify-content: center;
   width: 100%;
 }
-.top-content div {
+.logsub-box {
   padding: 100px;
   border: 1px solid black;
   margin: 20px;
