--- a/immunotracker/src/components/login.css
+++ b/immunotracker/src/components/login.css
@@ -1,18 +1,23 @@
 .top-content {
-  display: flex;
-  justify-content: center;
-  width: 100%;
+	display: flex;
+	justify-content: center;
+	width: 100%;
 }
 .logsub-box {
-  padding: 100px;
-  border: 1px solid black;
-  margin: 20px;
+	padding: 100px;
+	border: 1px solid black;
+	margin: 20px;
 }
 
 .bottom-content {
-  display: flex;
-  margin: 10px auto;
-  padding: 200px;
-  width: 27.5%;
-  border: 1px solid black;
+	display: flex;
+	margin: 10px auto;
+	padding: 200px;
+	width: 27.5%;
+	border: 1px solid black;
+}
+
+.registerField1 {
+	width: 60%;
+	margin: 10rem auto;
 }
