--- a/immunotracker/src/components/login.css
+++ b/immunotracker/src/components/login.css
@@ -1,12 +1,13 @@
 .top-content {
   display: flex;
   justify-content: center;
-  width: 100%;
 }
 .logsub-box {
   padding: 100px;
   border: 1px solid black;
   margin: 20px;
+  border-radius: 25px;
+  background-color: turquoise;
 }
 
 .bottom-content {
@@ -15,4 +16,13 @@
   padding: 200px;
   width: 27.5%;
   border: 1px solid black;
+  border-radius: 25px;
+  background-color: turquoise;
+}
+
+.llogo {
+  width: 30%;
+}
+.loglogo {
+  width: 25%;
 }
